force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>An academic department is a division of a faculty devoted to a particular academic discipline</description>
    <label>Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>