force-app/main/default/objects/Department__c/fields/ActiveCourses__c.field-meta.xml
<CustomField>
    <fullName>ActiveCourses__c</fullName>
    <label>Active Courses</label>
    <summaryFilterItems>
        <field>DepartmentCourse__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DepartmentCourse__c.Department__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>