force-app/main/default/objects/Department__c/fields/ActiveGroups__c.field-meta.xml
<CustomField>
    <fullName>ActiveGroups__c</fullName>
    <inlineHelpText>Number of active Student Groups</inlineHelpText>
    <label>Active Groups</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>