force-app/main/default/objects/Department__c/fields/ActiveProfessors__c.field-meta.xml
<CustomField>
    <fullName>ActiveProfessors__c</fullName>
    <label>Active Professors</label>
    <summaryFilterItems>
        <field>DepartmentProfessor__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DepartmentProfessor__c.Department__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>