force-app/main/default/objects/Department__c/fields/ActiveStudents__c.field-meta.xml
<CustomField>
    <fullName>ActiveStudents__c</fullName>
    <inlineHelpText>Number of active Student Group Members</inlineHelpText>
    <label>Active Students</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>