force-app/main/default/objects/Department__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>