force-app/main/default/objects/Department__c/fields/HeadOfDepartment__c.field-meta.xml
<CustomField>
    <fullName>HeadOfDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Department</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Heading Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>