force-app/main/default/objects/Department__c/validationRules/VR01_Faculty.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Faculty</fullName>
    <active>true</active>
    <errorConditionFormula>!Faculty__r.IsActive__c</errorConditionFormula>
    <errorDisplayField>Faculty__c</errorDisplayField>
    <errorMessage>Can&apos;t create a Department of inactive Faculty</errorMessage>
</ValidationRule>