force-app/main/default/objects/Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>Faculty__c</columns>
    <columns>HeadOfDepartment__c</columns>
    <columns>ActiveProfessors__c</columns>
    <columns>ActiveCourses__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>